[metanorma] clean up asciibib anchors

--- a/src/ans9.42/sections/98-references.adoc
+++ b/src/ans9.42/sections/98-references.adoc
@@ -7,10 +7,9 @@
 * [[[RFC8174,RFC 8174]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
@@ -34,19 +33,17 @@ date.type:: published
 date.value:: 2019-07-01
 
 [%bibitem]
+[[ANSx942]]
 === ANS x9.42
-id:: ANSx942
-docid::
-  id::: ANSx942
+docid.id:: ANSx942
 date::
 date.type:: published
 date.value:: 2003
 
 [%bibitem]
+[[SP800-135]]
 === SP800-135r1 Recommendation for Existing Application-Specific Key Derivation Functions Revision 1
-id:: SP800-135
-docid::
-  id::: SP800-135
+docid.id:: SP800-135
 contributor::
 contributor.person.name.initial:: Q.
 contributor.person.name.surname:: Dang
