--- a/src/draft-vassilev-acvp-iana.adoc
+++ b/src/draft-vassilev-acvp-iana.adoc
@@ -140,10 +140,9 @@ Security considerations are addressed by the ACVP specification.
 * [[[RFC8141,RFC 8141]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
@@ -167,10 +166,9 @@ date.type:: published
 date.value:: 2019-07-01
 
 [%bibitem]
+[[Sub-symmetric]]
 === ACVP Symmetric Algorithm JSON Specification
-id:: Sub-symmetric
-docid::
-  id::: ACVP-Symmetric
+docid.id:: ACVP-Symmetric
 
 // <reference anchor="Sub-symmetric">
 //   <front>
