--- a/src/dsa/sections/98-references.adoc
+++ b/src/dsa/sections/98-references.adoc
@@ -11,10 +11,9 @@
 * [[[SP800-106,NIST SP 800-106]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
