--- a/src/kas/sp800-56c/twostep/sections/98-references.adoc
+++ b/src/kas/sp800-56c/twostep/sections/98-references.adoc
@@ -12,10 +12,9 @@
 * [[[SP800-56Cr2,NIST SP 800-56C Rev. 2]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
