--- a/src/mac/sections/98-references.adoc
+++ b/src/mac/sections/98-references.adoc
@@ -12,10 +12,9 @@
 
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
@@ -39,10 +38,9 @@ date.type:: published
 date.value:: 2019-07-01
 
 [%bibitem]
+[[CMACVS]]
 === The CMAC Validation System (CMACVS)
-id:: CMACVS
-docid::
-  id::: NIST CMACVS
+docid.id:: NIST CMACVS
 
 // <reference anchor="CMACVS">
 //   <front>
@@ -57,10 +55,9 @@ docid::
 // </reference>
 
 [%bibitem]
+[[HMACVS]]
 === The Keyed-Hash Message Authentication Code Validation System (HMACVS)
-id:: HMACVS
-docid::
-  id::: NIST HMACVS
+docid.id:: NIST HMACVS
 
 // <reference anchor="HMACVS">
 //   <front>
@@ -75,10 +72,9 @@ docid::
 // </reference>
 
 [%bibitem]
+[[SHA3VS]]
 === The Secure Hash Algorithm 3 Validation System (SHA3VS)
-id:: SHA3VS
-docid::
-  id::: NIST SHA3VS
+docid.id:: NIST SHA3VS
 
 // <reference anchor="SHA3VS">
 //   <front>
@@ -93,10 +89,9 @@ docid::
 // </reference>
 
 [%bibitem]
+[[SHAVS]]
 === The Secure Hash Algorithm Validation System (SHAVS)
-id:: SHAVS
-docid::
-  id::: NIST SHAVS
+docid.id:: NIST SHAVS
 
 // <reference anchor="SHAVS">
 //   <front>
