--- a/src/safe-primes/sections/98-references.adoc
+++ b/src/safe-primes/sections/98-references.adoc
@@ -11,10 +11,9 @@
 * [[[SP800-56Ar3,NIST SP 800-56A Rev. 3]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
