--- a/src/sha/sections/98-references.adoc
+++ b/src/sha/sections/98-references.adoc
@@ -9,10 +9,9 @@
 * [[[FIPS180-4,NIST FIPS 180-4]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
@@ -36,10 +35,9 @@ date.type:: published
 date.value:: 2019-07-01
 
 [%bibitem]
+[[SHAVS]]
 === The Secure Hash Algorithm Validation System (SHAVS)
-id:: SHAVS
-docid::
-  id::: NIST SHAVS
+docid.id:: NIST SHAVS
 
 // <reference anchor="SHAVS">
 //   <front>
@@ -54,8 +52,7 @@ docid::
 // </reference>
 
 [%bibitem]
+[[LDT]]
 === Extending NIST’s CAVP Testing of Cryptographic Hash Function Implementations
-id:: LDT
-docid::
-  id::: LDT
+docid.id:: LDT
 // https://eprint.iacr.org/2019/1421.pdf
