--- a/src/symmetric/sections/98-references.adoc
+++ b/src/symmetric/sections/98-references.adoc
@@ -16,10 +16,9 @@
 * [[[RFC3686,RFC 3686]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.role:: author
 contributor.person.name.initial:: B.
@@ -47,10 +46,9 @@ date.value:: 2019-07-01
 
 
 [%bibitem]
+[[AES-GCM-SIV]]
 === AES-GCM-SIV Nonce Misuse-Resistant Authenticated Encryption
-id:: AES-GCM-SIV
-docid::
-  id::: AES-GCM-SIV
+docid.id:: AES-GCM-SIV
 contributor::
 contributor.role:: author
 contributor.person.name.initial:: S.
@@ -76,10 +74,9 @@ date.value:: 2018
 
 
 [%bibitem]
+[[SP800-38A-Add]]
 === SP800-38A Addendum Recommendation for Block Cipher Modes of Operation: Three Variants of Ciphertext Stealing for CBC Mode
-id:: SP800-38A-Add
-docid::
-  id::: SP800-38A-Add
+docid.id:: SP800-38A-Add
 contributor::
 contributor.role:: author
 contributor.person.name.initial:: M.
@@ -94,19 +91,17 @@ date.type:: published
 date.value:: 2010
 
 [%bibitem]
+[[ECMA]]
 === ECMA-368 High Rate Ultra Wideband PHY and MAC Standard
-id:: ECMA
-docid::
-  id::: ECMA
+docid.id:: ECMA
 link::
 link.type:: src
 link.content:: https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-368.pdf
 
 [%bibitem]
+[[AES-XTS]]
 === IEEE 1619-2007 — IEEE Standard for Cryptographic Protection of Data on Block-Oriented Storage Devices
-id:: AES-XTS
-docid::
-  id::: IEEE 1619-2007
+docid.id:: IEEE 1619-2007
 contributor::
 contributor.role:: author
 contributor.person.name.initial:: T.
