--- a/src/tls/sections/98-references.adoc
+++ b/src/tls/sections/98-references.adoc
@@ -9,8 +9,8 @@
 * [[[RFC7627,RFC 7627]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
 contributor::
 contributor.role:: author
 contributor.person.name.initial:: B.
