--- a/src/tpm/sections/98-references.adoc
+++ b/src/tpm/sections/98-references.adoc
@@ -8,10 +8,9 @@
 * [[[SP800-135,NIST SP 800-135 Rev. 1]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-    id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.role:: author
 contributor.person.name.initial:: B.
