--- a/src/conditioning-components/sections/98-references.adoc
+++ b/src/conditioning-components/sections/98-references.adoc
@@ -8,10 +8,9 @@
 * [[[SP800-90B,NIST SP 800-90B]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
