--- a/src/kas/sp800-56ar3/ssc/ecc/sections/98-references.adoc
+++ b/src/kas/sp800-56ar3/ssc/ecc/sections/98-references.adoc
@@ -12,10 +12,9 @@
 * [[[SP800-56Ar3,NIST SP 800-56A Rev. 3]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: R.
 contributor.person.name.surname:: Hammett
