--- a/src/kas/sp800-56c/onestepnocounter/sections/98-references.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/98-references.adoc
@@ -11,10 +11,9 @@
 
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
