--- a/src/pbkdf/sections/98-references.adoc
+++ b/src/pbkdf/sections/98-references.adoc
@@ -7,10 +7,9 @@
 * [[[RFC8174,RFC 8174]]]
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
