--- a/src/rsa/sections/98-references.adoc
+++ b/src/rsa/sections/98-references.adoc
@@ -16,10 +16,9 @@
 
 
 [%bibitem]
+[[ACVP]]
 === Automatic Cryptographic Validation Protocol
-id:: ACVP
-docid::
-  id::: ACVP
+docid.id:: ACVP
 contributor::
 contributor.person.name.initial:: B.
 contributor.person.name.surname:: Fussell
