[metanorma] Convert IETF to NIST formats, use metanorma site generate

--- a/src/draft-celi-acvp-eddsa.adoc
+++ b/src/draft-celi-acvp-eddsa.adoc
@@ -1,40 +1,36 @@
-
 = ACVP EdDSA Algorithm JSON Specification
-:doctype: internet-draft
-:docname: acvp-eddsa
-:name: draft-celi-acvp-eddsa-1.0
-:abbrev: ACVP EdDSA
-:status: informational
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2018-08-01
-:forename_initials: C.C.
-:lastname: Celi
+:title-main: ACVP EdDSA Algorithm JSON Specification
+:title-main-short: ACVP EdDSA Algorithm JSON Specification
 :fullname: Christopher Celi
-:organization: National Institute of Standards and Technology
-:street: 100 Bureau Drive
-:city: Gaithersburg
-:code: 20899
-:country: United States of America
-:email: christopher.celi@nist.gov
-:docfile: draft-celi-acvp-eddsa.adoc
-:role: editor
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, crypto
+:affiliation: Information Technology Laboratory
+:affiliation_subdiv: Computer Security Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.EDDSA
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: EDDSA
+:issued-date: 2018-08-01
+:copyright-year: 2018
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: FIPS Pub 186 EdDSA
 :algo-short-name: EdDSA
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::eddsa/sections/03-supported.adoc[]
 
@@ -78,9 +74,11 @@ include::eddsa/sections/07-eddsa-sigver-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::eddsa/sections/98-references.adoc[]
