--- a/src/draft-celi-acvp-sha3.adoc
+++ b/src/draft-celi-acvp-sha3.adoc
@@ -1,39 +1,36 @@
 = ACVP SHA3 and SHAKE JSON Specification
-:doctype: internet-draft
-:docname: acvp-sha3
-:docnumber: draft-ietf-acvp-sub-sha3-01
-:abbrev: ACVP SHA3
-:ipr: trust200902
-:submission-type: independent
-:area: General
-:intended-series: informational
-:revdate: 2018-11-01
-:forename_initials: C.C.
-:lastname: Celi
+:title-main: ACVP SHA3 and SHAKE JSON Specification
+:title-main-short: ACVP SHA3 and SHAKE JSON Specification
 :fullname: Christopher Celi
-:organization: National Institute of Standards and Technology
-:street: 100 Bureau Drive
-:city: Gaithersburg
-:code: 20899
-:country: United States of America
-:email: christopher.celi@nist.gov
-:role: editor
-:docfile: draft-celi-acvp-sha3.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:xrefstyle: full
-:area: General
-:keyword: acvp, crypto
+:affiliation: Information Technology Laboratory
+:affiliation_subdiv: Computer Security Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.SHA3
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: SHA3
+:issued-date: 2018-11-01
+:copyright-year: 2018
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: SHA3 and SHAKE
 :algo-short-name: SHA3 and SHAKE
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::sha3/sections/03-supported.adoc[]
 
@@ -55,9 +52,11 @@ include::sha3/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::sha3/sections/98-references.adoc[]
