--- a/src/draft-celi-acvp-symmetric.adoc
+++ b/src/draft-celi-acvp-symmetric.adoc
@@ -1,40 +1,28 @@
-
 = ACVP Symmetric Block Cipher Algorithm JSON Specification
-:doctype: internet-draft
-:docname: acvp-block-ciph
-:name: draft-celi-acvp-symmetric
-:abbrev: ACVP Symmetric Block Ciphers
-:status: informational
-:ipr: trust200902
-:submissionType: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2020-12-10
-:forename_initials: C.C.
-:lastname: Celi
+:title-main: ACVP Symmetric Block Cipher Algorithm JSON Specification
+:title-main-short: ACVP Symmetric Block Cipher Algorithm JSON Specification
 :fullname: Christopher Celi
-:organization: National Institute of Standards and Technology
-:street: 100 Bureau Drive
-:city: Gaithersburg
-:code: 20899
-:country: United States of America
-:email: christopher.celi@nist.gov
-:role: editor
-:forename_initials_2: R.H.
-:lastname_2: Hammett
+:affiliation: Information Technology Laboratory
+:affiliation_subdiv: Computer Security Division
 :fullname_2: Russell Hammett
-:organization_2: HII
-:street_2: 302 Sentinel Dr #300
-:city_2: Annapolis Junction
-:code_2: 20701
-:country_2: United States of America
-:email_2: russell.hammett@nist.gov
-:role_2: editor
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-
-:area: General
-:keyword: acvp, crypto
+:affiliation_2: HII Technical Solutions Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.SYMMETRIC
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: SYMMETRIC
+:issued-date: 2020-12-10
+:copyright-year: 2020
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: Symmetric Block Cipher
@@ -66,7 +54,7 @@ include::symmetric/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+// include::common/common-sections/11-iana.adoc[]
 
 include::symmetric/sections/99-acknowledgements.adoc[]
 
