--- a/src/draft-fussell-acvp-dsa.adoc
+++ b/src/draft-fussell-acvp-dsa.adoc
@@ -1,40 +1,36 @@
 = ACVP DSA Algorithm JSON Specification
-:doctype: internet-draft
-:docname: acvp-dsa
-:name: draft-fussell-acvp-dsa-1.0
-:abbrev: ACVP DSA
-:status: informational
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2016-06-01
-:keyword: acvp, crypto
-:forename_initials: B.F.
-:lastname: Fussell
+:title-main: ACVP DSA Algorithm JSON Specification
+:title-main-short: ACVP DSA Algorithm JSON Specification
 :fullname: Barry Fussell
-:organization: Cisco Systems, Inc.
-:street: 170 West Tasman Drive
-:city: San Jose
-:code: 95134
-:country: United States of America
-:email: bfussell@cisco.com
-:role: editor
-:organization: Cisco Systems, Inc.
-:email: bfussell@cisco.com
-:docfile: draft-fussell-acvp-dsa.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
+:affiliation: Cisco Systems, Inc.
+:address: 170 West Tasman Drive, San Jose, California
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.DSA
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: DSA
+:issued-date: 2016-06-01
+:copyright-year: 2016
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: FIPS 186-4 DSA
 :algo-short-name: DSA
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::dsa/sections/03-supported.adoc[]
 
@@ -84,7 +80,7 @@ include::dsa/sections/07-sigver-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+// include::common/common-sections/11-iana.adoc[]
 
 include::common/common-sections/99-acknowledgements.adoc[]
 
