--- a/src/draft-fussell-acvp-spec.adoc
+++ b/src/draft-fussell-acvp-spec.adoc
@@ -1,48 +1,32 @@
 = Automated Cryptographic Validation Protocol (ACVP) JSON Specification
-:doctype: internet-draft
-:docname: acvp-spec
-:docnumber: draft-ietf-acvp-spec-01
-:abbrev: ACVP Protocol
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2019-01-01
-:forename_initials: B.F.
-:lastname: Fussell
+:title-main: Automated Cryptographic Validation Protocol (ACVP) JSON Specification
+:title-main-short: Automated Cryptographic Validation Protocol (ACVP) JSON Specification
 :fullname: Barry Fussell
-:organization: Cisco Systems, Inc.
-:street: 170 West Tasman Drive
-:city: San Jose
-:code: 95134
-:country: United States of America
-:email: bfussell@cisco.com
-:role: editor
-:initials_2: A.V.
-:lastname_2: Vassilev
+:affiliation: Cisco Systems, Inc.
+:address: 170 West Tasman Drive, San Jose, California
 :fullname_2: Apostol Vassilev
-:organization_2: National Institute of Standards and Technology
-:street_2: 100 Bureau Drive
-:city_2: Gaithersburg
-:code_2: 20899
-:country_2: United States of America
-:email_2: apostol.vassilev@nist.gov
-:role_2: editor
-:initials_3: H.B.
-:lastname_3: Booth
+:affiliation_2: Information Technology Laboratory
+:affiliation_subdiv_2: Computer Security Division
 :fullname_3: Harold Booth
-:organization_3: National Institute of Standards and Technology
-:street_3: 100 Bureau Drive
-:city_3: Gaithersburg
-:code_3: 20899
-:country_3: United States of America
-:email_3: harold.booth@nist.gov
-:role_3: editor
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, template
-
+:affiliation_3: Information Technology Laboratory
+:affiliation_subdiv_3: Computer Security Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.SPEC
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: SPEC
+:issued-date: 2019-01-01
+:copyright-year: 2019
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 include::protocol/sections/00-abstract.adoc[]
 
@@ -78,7 +62,7 @@ include::protocol/sections/15-extensions.adoc[]
 
 include::protocol/sections/16-customspec.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+// include::common/common-sections/11-iana.adoc[]
 
 include::protocol/sections/18-other.adoc[]
 
