--- a/src/kas/sp800-56ar3/ffc/sections/98-references.adoc
+++ b/src/kas/sp800-56ar3/ffc/sections/98-references.adoc
@@ -12,5 +12,4 @@
 * [[[SP800-56Ar3,NIST SP 800-56A Rev. 3]]]
 * [[[SP800-56Cr1,NIST SP 800-56C Rev. 1]]]
 
-
-include::../../common/common-sections/99-references-acvp.adoc[]
+include::../../../../common/common-sections/99-references-acvp.adoc[]
