--- a/src/kas/sp800-56br2/sections/98-references.adoc
+++ b/src/kas/sp800-56br2/sections/98-references.adoc
@@ -12,4 +12,4 @@
 * [[[SP800-56Br2,NIST SP 800-56B Rev. 2]]]
 * [[[SP800-56Cr1,NIST SP 800-56C Rev. 1]]]
 
-include::../../common/common-sections/99-references-acvp.adoc[]
+include::../../../common/common-sections/99-references-acvp.adoc[]
