--- a/src/protocol/sections/11-messaging.adoc
+++ b/src/protocol/sections/11-messaging.adoc
@@ -114,8 +114,7 @@ A client may renew an expired JWT access token using the mechanism shown in <<xm
 
 [[xml_figureRenewalFlows]]
 [align=center,alt=,type=]
-JWT access token renewal flows. All exchanges shown are over HTTP.
-
+.JWT access token renewal flows. All exchanges shown are over HTTP.
 ....
          +--------+---------------------------------+------+--------+
          | Client |                                 |Server|  Notes |
@@ -140,8 +139,7 @@ below.
 
 [[xml_msgFlows]]
 [align=center,alt=,type=]
-An example minimal message flow. All exchanges shown are over HTTP.
-
+.An example minimal message flow. All exchanges shown are over HTTP.
 ....
    +--------+-----------------------------------+------+------------+
    | Client |                                   |Server|  Notes     |
