--- a/src/protocol/sections/98-references.adoc
+++ b/src/protocol/sections/98-references.adoc
@@ -36,14 +36,4 @@ date::
 date.type:: published
 date.value:: 2018-02
 
-[%bibitem]
-[[sub-symmetric]]
-=== ACVP Symmetric Algorithm JSON Specification
-docid.id:: NIST ACVP Symmetric Algorithm JSON Specification
-contributor::
-contributor.person.name.initial:: C.
-contributor.person.name.surname:: Celi
-contributor.person.affiliation.organization.name:: NIST
-date::
-date.type:: published
-date.value:: 2018
+include::../../common/common-sections/99-references-acvpsubsym.adoc[]
