--- a/src/sha/sections/98-references.adoc
+++ b/src/sha/sections/98-references.adoc
@@ -10,22 +10,7 @@
 
 include::../../common/common-sections/99-references-acvp.adoc[]
 
-[%bibitem]
-[[SHAVS]]
-=== The Secure Hash Algorithm Validation System (SHAVS)
-docid.id:: NIST SHAVS
-
-// <reference anchor="SHAVS">
-//   <front>
-//     <title>The Secure Hash Algorithm Validation System (SHAVS)</title>
-
-//     <author initials="L.E." surname="Bassham III">
-//       <organization>NIST</organization>
-//     </author>
-
-//     <date year="2014"></date>
-//   </front>
-// </reference>
+include::../../common/common-sections/99-references-shavs.adoc[]
 
 [%bibitem]
 [[LDT]]
