--- a/src/draft-celi-acvp-kdf-ansi-x942.adoc
+++ b/src/draft-celi-acvp-kdf-ansi-x942.adoc
@@ -1,35 +1,36 @@
 = ACVP ANS x9.42 Key Derivation Function JSON Specification
-:doctype: internet-draft
-:docname: acvp-x942
-:docnumber: draft-celi-acvp-kdf-ansi-x942-00
-:abbrev: ACVP ANS x9.42 KDF
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2021-01-04
+:title-main: ACVP ANS x9.42 Key Derivation Function JSON Specification
+:title-main-short: ACVP ANS x9.42 Key Derivation Function JSON Specification
 :fullname: Christopher Celi
-:lastname: Celi
-:forename_initials: C. C.
-:organization: National Institute of Standards and Technology
-:street: 100 Bureau Drive
-:city: Gaithersburg
-:code: 20899
-:country: United States of America
-:email: christopher.celi@nist.gov
-:docfile: draft-celi-acvp-ans-x942.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
+:affiliation: Information Technology Laboratory
+:affiliation_subdiv: Computer Security Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.KDF-ANSI-X942
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: KDF-ANSI-X942
+:issued-date: 2021-01-04
+:copyright-year: 2019
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: ANS x9.42 KDF
 :algo-short-name: ANS9.42
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::ans9.42/sections/03-supported.adoc[]
 
@@ -49,9 +50,12 @@ include::ans9.42/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::ans9.42/sections/98-references.adoc[]
+// include::ans9.42/sections/97-examples.adoc[]
