--- a/src/draft-celi-acvp-pbkdf.adoc
+++ b/src/draft-celi-acvp-pbkdf.adoc
@@ -1,38 +1,36 @@
 = ACVP Password-based Key Derivation Function JSON Specification
-:doctype: internet-draft
-:docname: acvp-pbkdf
-:docnumber: draft-gold-acvp-pbkdf-01
-:abbrev: ACVP PBKDF
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2019-06-05
-:forename_initials: C.C.
-:lastname: Celi
+:title-main: ACVP Password-based Key Derivation Function JSON Specification
+:title-main-short: ACVP Password-based Key Derivation Function JSON Specification
 :fullname: Christopher Celi
-:organization: National Institute of Standards and Technology
-:street: 100 Bureau Drive
-:city: Gaithersburg
-:code: 20899
-:country: United States of America
-:email: christopher.celi@nist.gov
-:role: editor
-:docfile: draft-gold-acvp-pbkdf.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, crypto
+:affiliation: Information Technology Laboratory
+:affiliation_subdiv: Computer Security Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.PBKDF
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: PBKDF
+:issued-date: 2019-06-05
+:copyright-year: 2020
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: Password-based KDF
 :algo-short-name: PBKDF
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::pbkdf/sections/03-supported.adoc[]
 
@@ -52,11 +50,16 @@ include::pbkdf/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
+
 include::pbkdf/sections/98-references.adoc[]
+
+// include::pbkdf/sections/97-examples.adoc[]
 
 
