--- a/src/draft-celi-acvp-xof.adoc
+++ b/src/draft-celi-acvp-xof.adoc
@@ -1,39 +1,36 @@
 = ACVP Extendable Output Function (XOF) JSON Specification
-:doctype: internet-draft
-:docname: acvp-xof
-:name: draft-gold-acvp-xof-1.0
-:abbrev: ACVP XOF
-:status: informational
-:ipr: trust200902
-:submissionType: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2019-01-01
-:forename_initials: C. C.
-:lastname: Celi
+:title-main: ACVP Extendable Output Function (XOF) JSON Specification
+:title-main-short: ACVP Extendable Output Function (XOF) JSON Specification
 :fullname: Christopher Celi
-:organization: National Institute of Standards and Technology
-:street: 100 Bureau Drive
-:city: Gaithersburg
-:code: 20899
-:country: United States of America
-:email: christopher.celi@nist.gov
-:role: editor
-:docfile: draft-celi-acvp-xof.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, crypto
+:affiliation: Information Technology Laboratory
+:affiliation_subdiv: Computer Security Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.XOF
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: XOF
+:issued-date: 2019-01-01
+:copyright-year: 2019
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: Extendable Output Function
 :algo-short-name: XOF
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::xof/sections/03-supported.adoc[]
 
@@ -53,9 +50,11 @@ include::xof/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::xof/sections/98-references.adoc[]
