--- a/src/draft-fussell-acvp-ecdsa.adoc
+++ b/src/draft-fussell-acvp-ecdsa.adoc
@@ -1,40 +1,36 @@
 = ACVP ECDSA Algorithm JSON Specification
-:doctype: internet-draft
-:docname: acvp-ecdsa
-:name: draft-fussell-acvp-sub-ecdsa-1.0
-:abbrev: ACVP ECDSA
-:status: informational
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2016-06-01
-:keyword: acvp, crypto
-:forename_initials: B.F.
-:lastname: Fussell
+:title-main: ACVP ECDSA Algorithm JSON Specification
+:title-main-short: ACVP ECDSA Algorithm JSON Specification
 :fullname: Barry Fussell
-:organization: Cisco Systems, Inc.
-:street: 170 West Tasman Drive
-:city: San Jose
-:code: 95134
-:country: United States of America
-:email: bfussell@cisco.com
-:role: editor
-:organization: Cisco Systems, Inc.
-:email: bfussell@cisco.com
-:docfile: draft-fussell-acvp-ecdsa.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
+:affiliation: Cisco Systems, Inc.
+:address: 170 West Tasman Drive, San Jose, California
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.ECDSA
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: ECDSA
+:issued-date: 2016-06-01
+:copyright-year: 2016
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: FIPS PUB 186 ECDSA
 :algo-short-name: ECDSA
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::ecdsa/sections/03-supported.adoc[]
 
@@ -84,9 +80,11 @@ include::ecdsa/sections/07-ecdsa-detsiggen-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::ecdsa/sections/98-references.adoc[]
