--- a/src/draft-fussell-acvp-mac.adoc
+++ b/src/draft-fussell-acvp-mac.adoc
@@ -1,47 +1,39 @@
 = ACVP Message Authentication Algorithm JSON Specification
-:doctype: internet-draft
-:docname: acvp-mac
-:docnumber: draft-ietf-acvp-sub-mac-01
-:abbrev: ACVP MAC
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2018-08-01
-:forename_initials: B.F.
-:lastname: Fussell
+:title-main: ACVP Message Authentication Algorithm JSON Specification
+:title-main-short: ACVP Message Authentication Algorithm JSON Specification
 :fullname: Barry Fussell
-:organization: Cisco Systems, Inc.
-:street: 170 West Tasman Drive
-:city: San Jose
-:code: 95134
-:country: United States of America
-:email: bfussell@cisco.com
-:role: editor
-:initials_2: R.H.
-:lastname_2: Hammett
+:affiliation: Cisco Systems, Inc.
+:address: 170 West Tasman Drive, San Jose, California
 :fullname_2: Russell Hammett
-:organization_2: G2, Inc.
-:street_2: 302 Sentinel Drive, Suite #300
-:city_2: Annapolis Junction
-:code_2: 20701
-:country_2: United States of America
-:email_2: russ.hammett@g2-inc.com
-:role_2: editor
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, crypto
+:affiliation_2: G2, Inc.
+:address_2: 302 Sentinel Drive, Suite #300, Annapolis Junction, MD 20701
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.MAC
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: MAC
+:issued-date: 2018-08-01
+:copyright-year: 2018
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: HMAC, CMAC, and GMAC
 :algo-short-name: MAC
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::mac/sections/03-supported.adoc[]
 
@@ -85,9 +77,11 @@ include::mac/sections/07-hmac-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::mac/sections/98-references.adoc[]
