--- a/src/draft-hammett-acvp-kas-ffc-sp800-56ar3.adoc
+++ b/src/draft-hammett-acvp-kas-ffc-sp800-56ar3.adoc
@@ -1,39 +1,36 @@
-
 = ACVP KAS FFC SP800-56Ar3 JSON Specification
-:doctype: internet-draft
-:docname: acvp-kas-ffc
-:name: draft-hammett-acvp-kas-ffc-sp800-56ar3-1.0
-:abbrev: ACVP KAS FFC SP800-56Ar3
-:status: informational
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2020-01-31
-:forename_initials: R.H.
-:lastname: Hammett
+:title-main: ACVP KAS FFC SP800-56Ar3 JSON Specification
+:title-main-short: ACVP FFC ECC SP800-56Ar3 JSON Specification
 :fullname: Russell Hammett
-:organization: HII TSD
-:street: 302 Sentinel Drive, Suite #300
-:city: Annapolis Junction
-:code: 20701
-:country: United States of America
-:email: russ.hammett@hii-tsd.com
-:role: editor
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, crypto
+:affiliation: HII Technical Solutions Division
+:address: 302 Sentinel Drive, Suite #300, Annapolis Junction, MD 20701
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.KAS-FFC-SP800-56Ar3
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: KAS-FFC-SP800-56Ar3
+:issued-date: 2020-01-31
+:copyright-year: 2020
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: SP800-56Ar3 KAS FFC
 :algo-short-name: KAS FFC
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::kas/sp800-56ar3/ffc/sections/03-supported.adoc[]
 
@@ -53,9 +50,11 @@ include::kas/sp800-56ar3/ffc/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::kas/sp800-56ar3/ffc/sections/98-references.adoc[]
