--- a/src/draft-hammett-acvp-kas-kc-sp800-56.adoc
+++ b/src/draft-hammett-acvp-kas-kc-sp800-56.adoc
@@ -1,29 +1,26 @@
-
-= ACVP KAS KC SP800-56 JSON Specification
-:doctype: internet-draft
-:docname: acvp-kas-kc
-:name: draft-hammett-acvp-kas-kc-sp800-56-1.0
-:abbrev: ACVP KAS KC SP800-56
-:status: informational
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2021-07-22
-:forename_initials: R.H.
-:lastname: Hammett
+= ACVP KAS KC SP 800-56 JSON Specification
+:title-main: ACVP KAS KC SP 800-56 JSON Specification
+:title-main-short: ACVP KAS KC SP 800-56 JSON Specification
 :fullname: Russell Hammett
-:organization: HII TSD
-:street: 302 Sentinel Drive, Suite #300
-:city: Annapolis Junction
-:code: 20701
-:country: United States of America
-:email: russ.hammett@hii-tsd.com
-:role: editor
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, crypto
+:affiliation: HII Technical Solutions Division
+:address: 302 Sentinel Drive, Suite #300, Annapolis Junction, MD 20701
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.KAS-KDF-TwoStep
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: KAS-KDF-KCSP800-56
+:issued-date: 2021-07-22
+:copyright-year: 2021
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: SP800-56 KAS KC
@@ -32,8 +29,6 @@
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::kas/kc/03-supported.adoc[]
 
@@ -53,9 +48,11 @@ include::kas/kc/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::kas/kc/98-references.adoc[]
