--- a/src/draft-hammett-acvp-kas-ssc-ifc.adoc
+++ b/src/draft-hammett-acvp-kas-ssc-ifc.adoc
@@ -1,39 +1,36 @@
 = ACVP KAS IFC SSC Specification
-:doctype: internet-draft
-:docname: acvp-kas-ssc-ifc-sp800-56ar3
-:docnumber: draft-ietf-acvp-sub-kas-ssc-ifc-sp800-56ar3
-:abbrev: ACVP KAS SSC IFC SP800-56Br2
-:ipr: trust200902
-:submission-type: independent
-:area: General
-:intended-series: informational
-:revdate: 2020-08-19
-:forename_initials: R.H.
-:lastname: Hammett
+:title-main: ACVP KAS IFC SSC Specification
+:title-main-short: ACVP KAS IFC SSC Specification
 :fullname: Russell Hammett
-:organization: HII
-:street: 302 Sentinel Dr #300
-:city: Annapolis Junction
-:code: 20701
-:country: United States of America
-:email: russell.hammett@nist.gov
-:role: editor
-:docfile: draft-hammett-acvp-kas-ssc-ifc.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:xrefstyle: full
-:area: General
-:keyword: acvp, crypto
+:affiliation: HII Technical Solutions Division
+:address: 302 Sentinel Drive, Suite #300, Annapolis Junction, MD 20701
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.KAS-SSC-IFC
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: KAS-SSC-IFC
+:issued-date: 2020-08-19
+:copyright-year: 2020
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: KAS-IFC-SSC SP800-56Br2
 :algo-short-name: KAS-IFC-SSC SP800-56Br2
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::kas/sp800-56br2/ssc/sections/03-supported.adoc[]
 
@@ -53,9 +50,11 @@ include::kas/sp800-56br2/ssc/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::kas/sp800-56br2/ssc/sections/98-references.adoc[]
