--- a/src/draft-hammett-acvp-safe-primes.adoc
+++ b/src/draft-hammett-acvp-safe-primes.adoc
@@ -1,38 +1,36 @@
 = ACVP SafePrimes JSON Specification
-:doctype: internet-draft
-:docname: acvp-safe-primes
-:name: draft-gold-acvp-safe-primes
-:abbrev: ACVP SafePrimes
-:status: informational
-:ipr: trust200902
-:submissionType: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2019-06-05
-:forename_initials: R. H.
-:lastname: Hammett
+:title-main: ACVP SafePrimes JSON Specification
+:title-main-short: ACVP SafePrimes JSON Specification
 :fullname: Russell Hammett
-:organization: HII-TSD
-:street: 302 Sentinel Drive, Suite 300
-:city: Annapolis Junction
-:code: 20701
-:country: United States of America
-:email: russell.hammett@nist.gov
-:role: editor
-:docfile: draft-hammett-acvp-safe-primes.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
-:area: General
-:keyword: acvp, crypto
+:affiliation: HII Technical Solutions Division
+:address: 302 Sentinel Drive, Suite #300, Annapolis Junction, MD 20701
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.SafePrimes
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: SafePrimes
+:issued-date: 2019-06-05
+:copyright-year: 2019
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
+
 // Singular name of the algorithm
 :spec-algorithm: SafePrimes
 :algo-short-name: SafePrimes
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::safe-primes/sections/03-supported.adoc[]
 
@@ -60,9 +58,11 @@ include::safe-primes/sections/07-keyver-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::safe-primes/sections/98-references.adoc[]
