--- a/src/draft-vassilev-acvp-drbg.adoc
+++ b/src/draft-vassilev-acvp-drbg.adoc
@@ -1,35 +1,36 @@
 = ACVP Deterministic Random Bit Generator (DRBG) Algorithm JSON Specification
-:doctype: internet-draft
-:docname: acvp-drbg
-:docnumber: draft-vassilev-acvp-drbg-00
-:abbrev: ACVP DRBG
-:ipr: trust200902
-:submission-type: independent
-:area: Internet
-:intended-series: informational
-:revdate: 2019-06-05
-:forename_initials: A.V.
-:lastname: Vassilev
+:title-main: ACVP Deterministic Random Bit Generator (DRBG) Algorithm JSON Specification
+:title-main-short: ACVP Deterministic Random Bit Generator (DRBG) Algorithm JSON Specification
 :fullname: Apostol Vassilev
-:organization: National Institute of Standards and Technology
-:street: 100 Bureau Drive
-:city: Gaithersburg
-:code: 20899
-:country: United States of America
-:email: apostol.vassilev@nist.gov
-:docfile: draft-vassilev-acvp-drbg.adoc
-:mn-document-class: ietf
-:mn-output-extensions: xml,rfc,txt,html
+:affiliation: Information Technology Laboratory
+:affiliation_subdiv: Computer Security Division
+:doi: https://doi.org/10.6028/NIST.CSRC.AVCP.DRBG
+:series: nist-csts
+:series-title: Automated Cryptographic Validation Protocol
+:series-abbrev: ACVP
+:series-mrprefix: CSRC.ACVP
+:nist-division: Computer Security Division, Information Technology Laboratory
+:nist-division-address: 100 Bureau Drive (Mail Stop 8930) Gaithersburg, MD 20899-8930
+:docnumber: DRBG
+:issued-date: 2019-06-05
+:copyright-year: 2019
+:revision: 1
+:keywords: ACVP, cryptography
+:doc-email: algotest@list.nist.gov
+:mn-document-class: nist
+:mn-output-extensions: xml,html,pdf,rxl
+:biblio-as-appendix:
+:local-cache-only:
 
 // Singular name of the algorithm
 :spec-algorithm: SP800-90A DRBG
 :algo-short-name: DRBG
 
+include::common/common-sections/00-preface.adoc[]
+
 include::common/common-sections/00-abstract.adoc[]
 
 include::common/common-sections/01-intro.adoc[]
-
-include::common/common-sections/02-conventions.adoc[]
 
 include::drbg/sections/03-supported.adoc[]
 
@@ -49,9 +50,11 @@ include::drbg/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
-include::common/common-sections/11-iana.adoc[]
+include::common/common-sections/95-terminology.adoc[]
 
-include::common/common-sections/99-acknowledgements.adoc[]
+include::common/common-sections/96-abbrev.adoc[]
+
+include::common/common-sections/97-revision-history.adoc[]
 
 // References must be given before appendixes
 include::drbg/sections/98-references.adoc[]
