--- a/src/kas/sp800-56ar2/ffc/sections/98-references.adoc
+++ b/src/kas/sp800-56ar2/ffc/sections/98-references.adoc
@@ -8,4 +8,4 @@
 * [[[FIPS186-4,NIST FIPS 186-4]]]
 * [[[SP800-56Ar2,NIST SP 800-56A Rev. 2]]]
 
-include::../../common/common-sections/99-references-acvp.adoc[]
+include::../../../../common/common-sections/99-references-acvp.adoc[]
