--- a/src/kas/sp800-56ar3/ssc/ecc/sections/98-references.adoc
+++ b/src/kas/sp800-56ar3/ssc/ecc/sections/98-references.adoc
@@ -11,4 +11,4 @@
 * [[[FIPS186-4,NIST FIPS 186-4]]]
 * [[[SP800-56Ar3,NIST SP 800-56A Rev. 3]]]
 
-include::../../common/common-sections/99-references-acvp.adoc[]
+include::../../../../../common/common-sections/99-references-acvp.adoc[]
