--- a/src/kas/sp800-56c/hkdf/sections/98-references.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/98-references.adoc
@@ -11,4 +11,4 @@
 * [[[SP800-56Cr1,NIST SP 800-56C Rev. 1]]]
 * [[[SP800-56Cr2,NIST SP 800-56C Rev. 2]]]
 
-include::../../common/common-sections/99-references-acvp.adoc[]
+include::../../../../common/common-sections/99-references-acvp.adoc[]
