--- a/src/kas/sp800-56c/onestepnocounter/sections/98-references.adoc
+++ b/src/kas/sp800-56c/onestepnocounter/sections/98-references.adoc
@@ -9,4 +9,4 @@
 * [[[SP800-56Br2,NIST SP 800-56B Rev. 2]]]
 * [[[SP800-56Cr2,NIST SP 800-56C Rev. 2]]]
 
-include::../../common/common-sections/99-references-acvp.adoc[]
+include::../../../../common/common-sections/99-references-acvp.adoc[]
