Updates example to match reality.

--- a/src/common/common-sections/06-test-vector-intro.adoc
+++ b/src/common/common-sections/06-test-vector-intro.adoc
@@ -22,12 +22,16 @@ An example of this would look like this
 
 [source,json]
 ----
-{
-  "acvVersion": "version",
-  "vsId": 1,
-  "algorithm": "Alg1",
-  "mode": "Mode1",
-  "revision": "Revision1.0",
-  "testGroups": [ ... ]
-}
+[
+  {
+    "acvVersion": <version>
+  },
+  {
+    "vsId": 1,
+    "algorithm": "Alg1",
+    "mode": "Mode1",
+    "revision": "Revision1.0",
+    "testGroups": [ ... ]
+  }
+]
 ----
