Fixes KAS-IFC-SSC formatting issue
Fixes KAS-IFC-SSC formatting issue that caused hashFunctionZ not to display in table 4 of the spec.

--- a/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/05-capabilities.adoc
@@ -48,7 +48,7 @@ Each algorithm capability advertised is a self-contained JSON object using the f
 | modulo | The supported common modulo | array of integer | See <<modulo>> | No
 | fixedPubExp | The fixed public exponent used for key generation.  Required if using at least 1 static fixed public exponent key generation method. | hex | | Yes
 | scheme | Array of supported key agreement schemes each having their own capabilities | object | See <<supported_schemes>>| No
-| hashFunctionZ | Optional hash function to apply to the shared secret `z` in instances where the IUT is unable to return the `z` in the clear. | string | See <<hashFunctionZ>>
+| hashFunctionZ | Optional hash function to apply to the shared secret `z` in instances where the IUT is unable to return the `z` in the clear. | string | See <<hashFunctionZ>> | Yes
 |===
 
 Note: Some optional values are *REQUIRED* depending on the algorithm. Failure to provide these values will result in the ACVP server returning an error to the ACVP client during registration.
