updates KDA/TwoStep supportedLengths desc
updates KDA/TwoStep supportedLengths description.

Closes #1339

--- a/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
@@ -47,7 +47,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 | macMode | The macMode supported by the KDA. | array of string | CMAC-AES128, CMAC-AES192, CMAC-AES256, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512
 | fixedDataOrder | The counter locations supported by the KDA. | array of string| none, before fixed data, after fixed data, before iterator
 | counterLength | The counter lengths supported for the KDA. | array of integer | 8, 16, 24, 32
-| supportedLengths | The supported derivation lengths. | domain| Single range (of literal) expected.  Registered value must support the L value provided.
+| supportedLengths | The supported derivation lengths. | domain| Registered value(s) must support the 'l' value provided.
 | supportsEmptyIv | The KDA supports an empty IV (feedback mode). | boolean | true, false
 | requiresEmptyIv | The KDA requires an empty IV (feedback mode). | boolean | true, false
 |===
